# spongefish

./: Cargo.toml
circuit/: Cargo.toml
pow/src/: keccak.rs
spongefish/: Cargo.toml
spongefish/src/: domain_separator.rs  lib.rs  narg_verifier.rs
spongefish/src/instantiations/: mod.rs  permutations.rs
spongefish/src/pattern/: checked_prover.rs  checked_verifier.rs  interaction.rs  mod.rs  player.rs
